# interactive_object_recognition

./: .gitignore  README.md
cloud_saver/: CMakeLists.txt  mainpage.dox  manifest.xml
cloud_saver/cfg/: SaverConfig.cfg
cloud_saver/include/cloud_saver/: cloud_saver.h
cloud_saver/src/: cloud_saver.cpp  main_saver.cpp
dense_reconstruction/: CMakeLists.txt  manifest.xml
dense_reconstruction/include/dense_reconstruction/: DenseReconstruction.h  point_type.h  point_type.hpp
dense_reconstruction/src/: DenseReconstruction.hpp  main_reconstruction.cpp
feature_cv_waitinglist/: CMakeCache.txt  CMakeLists.txt  Makefile  feature_cv_waitinglist.cbp
feature_cv_waitinglist/cfg/cpp/feature_cv_waitinglist/: FeatureConfig.h
feature_cv_waitinglist/docs/: FeatureConfig-usage.dox  FeatureConfig.dox  FeatureConfig.wikidoc
feature_cv_waitinglist/include/feature_cv_waitinglist/: feature_matching.h
feature_cv_waitinglist/src/: feature_matching.cpp
feature_cv_waitinglist/src/feature_cv_waitinglist/cfg/: FeatureConfig.py
pcd_io/: CMakeLists.txt  mainpage.dox  manifest.xml
pcd_io/include/pcd_io/: pcd_io.h
pcd_io/src/: pcd_io.cpp
pcl_typedefs/: CMakeLists.txt  mainpage.dox  manifest.xml
pcl_typedefs/include/pcl_typedefs/: pcl_typedefs.h
ransac_waitinglist/: manifest.xml
ransac_waitinglist/docs/: RANSACConfig-usage.dox  RANSACConfig.dox  RANSACConfig.wikidoc
template_library/: CMakeLists.txt  mainpage.dox  manifest.xml  ordering.sh
template_library/cfg/: LibraryConfig.cfg
template_library/include/template_library/: template_library.h
template_library/src/: main_library.cpp  template_library.cpp
template_matching/: CMakeLists.txt  mainpage.dox  manifest.xml
template_matching/cfg/: MatcherConfig.cfg
template_matching/include/template_matching/: object_data.h  objects_database.h  probabilisticmatcher.h  recognition_training.h  template_matching.h
template_matching/launch/: template.launch
template_matching/src/: main.cpp  main_probabilistic.cpp  object_data.cpp  objects_database.cpp  probabilisticmatcher.cpp  recognition_training.cpp  template_matching.cpp  util.cpp
visualizer/: CMakeLists.txt  mainpage.dox  manifest.xml
visualizer/include/visualizer/: Visualizer.h  VisualizerImpl.h
visualizer/src/: VisualizerImpl.cpp
(+2 files in other folders)
